# goit-web-hw-07

./: connect_db.py  create_tables.py  create_tables.sql  main.py  models.py  my_select.py  pyproject.toml  query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  seeds.py
migrations/versions/: 322063764f08_init.py
