[tool.poetry]
name = "goit-web-hw-07"
version = "0.1.0"
description = ""
authors = ["Volodymyr-Hokh <132125735+Volodymyr-Hokh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
faker = "^19.6.2"
psycopg2 = "^2.9.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
